# sqlwizardry

./: .clang-format  .codecov.yaml  .gitattributes  .gitignore  1  404.html  CMakeLists.txt  LICENSE  Makefile  README.md  Version.cmake  index.html  mkdocs.yml  requirements.txt  sqlwizardry.pc.in  version.hpp.in
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mergeable.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  meta-change-request.md
.github/workflows/: CI.yml  Main.yml  PR.yml  build.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake  FindSphinx.cmake  SqlWizardryDiagnostics.cmake  SqlWizardryEnv.cmake  SqlWizardryFlags.cmake  SqlWizardryOptions.cmake  conanConfig.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/source/: conf.py
include/sqlwizardry/v1/: all.hpp  column.hpp  macro.hpp  predicate.hpp  query.hpp  serialiser.hpp
include/sqlwizardry/v1/detail/: macro.hpp  reflection.hpp  traits.hpp  type.hpp
include/sqlwizardry/v1/engine/: debug.hpp  mysql.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  declaration.cpp
